Bumped aoc bom to 1.3.2